--- a/Layout1/index.html
+++ b/Layout1/index.html
@@ -5,10 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Exo:100,400,400i,500|Lato&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header>
+        <div class="header">
+            <h1 class="h1">There is no other platforms for you as like</h1>
+        </div>
+    </header>
     
 </body>
 </html>
