--- a/Layout1/index.html
+++ b/Layout1/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,12 +10,19 @@
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Exo:100,400,400i,500|Lato&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <div class="header">
             <h1 class="h1">There is no other platforms for you as like</h1>
+            <img src="img/play-video-icon.png" alt="Play video button">
+            <button class="button-header">TRY NOW</button>
+            <p class="header-description">* No need to add cards details</p>
         </div>
     </header>
+
     
+
 </body>
+
 </html>
