--- a/Layout1/index.html
+++ b/Layout1/index.html
@@ -13,14 +13,32 @@
 
 <body>
     <header>
-        <div class="header">
+        <div class="header container">
             <h1 class="h1">There is no other platforms for you as like</h1>
             <img src="img/play-video-icon.png" alt="Play video button">
             <button class="button-header">TRY NOW</button>
             <p class="header-description">* No need to add cards details</p>
         </div>
     </header>
+    <section class="section-2">
+        <div class="section-2-left container clearfix">
+            <h2 class="section-2-title">There is no other platforms for you as like </h2>
+            <p class="section-2-text">
+                    Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. 
+                    Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. 
+                    Etiam porta sem malesuada magna mollis euismod. Vestibulum id ligula porta felis euismod
+                     semper.
+                    <br/><br/>
+                    Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Donec ullamcorper 
+                    nulla non metus auctor fringilla. Aenean lacinia bibendum nulla sed consectetur. Nulla 
+                    vitae elit libero, a pharetra augue.
+            </p>
+        </div>
+        <!--<div class="section-2-right">
+            <img src="img/img-section2.png" alt="">
+        </div>-->
 
+    </section>
     
 
 </body>
